Adding updated conf files from latest random factory release

--- a/.gitattributes
+++ b/.gitattributes
@@ -477,6 +477,8 @@
 3rdparty/libapogee/conf/A12HS.txt -text
 3rdparty/libapogee/conf/A16HR.txt -text
 3rdparty/libapogee/conf/A16HS.txt -text
+3rdparty/libapogee/conf/A694S.txt -text
+3rdparty/libapogee/conf/A694V.txt -text
 3rdparty/libapogee/conf/AR2.txt -text
 3rdparty/libapogee/conf/AR2D.txt -text
 3rdparty/libapogee/conf/AR2F.txt -text
@@ -495,12 +497,15 @@
 3rdparty/libapogee/conf/AR4Vb.txt -text
 3rdparty/libapogee/conf/AR5.txt -text
 3rdparty/libapogee/conf/AR5F.txt -text
+3rdparty/libapogee/conf/AR5FL.txt -text
+3rdparty/libapogee/conf/AR5L.txt -text
 3rdparty/libapogee/conf/AR5V.txt -text
 3rdparty/libapogee/conf/AS2.txt -text
 3rdparty/libapogee/conf/AS2S.txt -text
 3rdparty/libapogee/conf/AS4.txt -text
 3rdparty/libapogee/conf/AS5.txt -text
 3rdparty/libapogee/conf/AS5F.txt -text
+3rdparty/libapogee/conf/AS5S.txt -text
 3rdparty/libapogee/conf/AV1.txt -text
 3rdparty/libapogee/conf/AV2.txt -text
 3rdparty/libapogee/conf/AV2S.txt -text
@@ -513,9 +518,13 @@
 3rdparty/libapogee/conf/AV4V.txt -text
 3rdparty/libapogee/conf/AV4Vb.txt -text
 3rdparty/libapogee/conf/AV5.txt -text
+3rdparty/libapogee/conf/AV5S.txt -text
 3rdparty/libapogee/conf/AV5V.txt -text
 3rdparty/libapogee/conf/AV6.txt -text
 3rdparty/libapogee/conf/AV7.txt -text
+3rdparty/libapogee/conf/CG42AIMOV.txt -text
+3rdparty/libapogee/conf/CG42NIMOV.txt -text
+3rdparty/libapogee/conf/CG47V.txt -text
 3rdparty/libapogee/conf/F10140V.txt -text
 3rdparty/libapogee/conf/F16HR1.txt -text
 3rdparty/libapogee/conf/F16HR1B.txt -text
@@ -524,11 +533,23 @@
 3rdparty/libapogee/conf/F29050S.txt -text
 3rdparty/libapogee/conf/F29050V.txt -text
 3rdparty/libapogee/conf/F30V.txt -text
+3rdparty/libapogee/conf/F30VAIMO.txt -text
 3rdparty/libapogee/conf/F4000V.txt -text
 3rdparty/libapogee/conf/F47DDV.txt -text
 3rdparty/libapogee/conf/F47V12.txt -text
 3rdparty/libapogee/conf/F6V.txt -text
 3rdparty/libapogee/conf/F77V.txt -text
+3rdparty/libapogee/conf/FA694R.txt -text
+3rdparty/libapogee/conf/FCG16070.txt -text
+3rdparty/libapogee/conf/FCG16M.txt -text
+3rdparty/libapogee/conf/FCG285.txt -text
+3rdparty/libapogee/conf/FCG42.txt -text
+3rdparty/libapogee/conf/FCG42S.txt -text
+3rdparty/libapogee/conf/FCG6.txt -text
+3rdparty/libapogee/conf/FCG77.txt -text
+3rdparty/libapogee/conf/FCG77S.txt -text
+3rdparty/libapogee/conf/FCG8300.txt -text
+3rdparty/libapogee/conf/FCG8300S.txt -text
 3rdparty/libapogee/conf/FEHR1AQ.txt -text
 3rdparty/libapogee/conf/FEHR1BQ.txt -text
 3rdparty/libapogee/conf/FEHR2c.txt -text
@@ -542,6 +563,7 @@
 3rdparty/libapogee/conf/FF10140S.txt -text
 3rdparty/libapogee/conf/FF1109R.txt -text
 3rdparty/libapogee/conf/FF16000R.txt -text
+3rdparty/libapogee/conf/FF16000R2.txt -text
 3rdparty/libapogee/conf/FF16000S.txt -text
 3rdparty/libapogee/conf/FF29050R.txt -text
 3rdparty/libapogee/conf/FF30R.txt -text
@@ -561,7 +583,9 @@
 3rdparty/libapogee/conf/FF9R.txt -text
 3rdparty/libapogee/conf/FF9S.txt -text
 3rdparty/libapogee/conf/FKHR1A.txt -text
+3rdparty/libapogee/conf/FKHR1At.txt -text
 3rdparty/libapogee/conf/FKHR1B.txt -text
+3rdparty/libapogee/conf/FKHR1B8.txt -text
 3rdparty/libapogee/conf/FKHR1D.txt -text
 3rdparty/libapogee/conf/FKHR1Db.txt -text
 3rdparty/libapogee/conf/FKHR1c.txt -text
@@ -572,11 +596,13 @@
 3rdparty/libapogee/conf/FKHR4BQ.txt -text
 3rdparty/libapogee/conf/FKHR5A.txt -text
 3rdparty/libapogee/conf/FKHR5B.txt -text
+3rdparty/libapogee/conf/FKHR5C.txt -text
 3rdparty/libapogee/conf/FKHR6A.txt -text
 3rdparty/libapogee/conf/FKHR6B.txt -text
 3rdparty/libapogee/conf/FKHS1.txt -text
 3rdparty/libapogee/conf/FKHS1A.txt -text
 3rdparty/libapogee/conf/FKHS1B.txt -text
+3rdparty/libapogee/conf/FKHS1B8.txt -text
 3rdparty/libapogee/conf/FKHS1c.txt -text
 3rdparty/libapogee/conf/FKHS1i.txt -text
 3rdparty/libapogee/conf/FKHS3c8.txt -text
@@ -596,7 +622,9 @@
 3rdparty/libapogee/conf/FM16HR3.txt -text
 3rdparty/libapogee/conf/FM16HS1.txt -text
 3rdparty/libapogee/conf/FR2.txt -text
+3rdparty/libapogee/conf/FR230.txt -text
 3rdparty/libapogee/conf/FR2F.txt -text
+3rdparty/libapogee/conf/FS230.txt -text
 3rdparty/libapogee/conf/FV1.txt -text
 3rdparty/libapogee/conf/FV1B.txt -text
 3rdparty/libapogee/conf/H12HC.txt -text
@@ -736,6 +764,7 @@
 3rdparty/libapogee/conf/MV1nimo.txt -text
 3rdparty/libapogee/conf/MV2.txt -text
 3rdparty/libapogee/conf/MV230.txt -text
+3rdparty/libapogee/conf/MV230t.txt -text
 3rdparty/libapogee/conf/MV2B.txt -text
 3rdparty/libapogee/conf/MV2C.txt -text
 3rdparty/libapogee/conf/MV2CN.txt -text
@@ -744,9 +773,28 @@
 3rdparty/libapogee/conf/MV4B.txt -text
 3rdparty/libapogee/conf/MV7.txt -text
 3rdparty/libapogee/conf/MV7i.txt -text
+3rdparty/libapogee/conf/Makefile.am -text
+3rdparty/libapogee/conf/Makefile.in -text
+3rdparty/libapogee/conf/NA694R.txt -text
+3rdparty/libapogee/conf/NCG16.txt -text
+3rdparty/libapogee/conf/NCG16070.txt -text
+3rdparty/libapogee/conf/NCG16070S.txt -text
+3rdparty/libapogee/conf/NCG16M.txt -text
+3rdparty/libapogee/conf/NCG285.txt -text
+3rdparty/libapogee/conf/NCG285S.txt -text
+3rdparty/libapogee/conf/NCG42.txt -text
+3rdparty/libapogee/conf/NCG42S.txt -text
+3rdparty/libapogee/conf/NCG47.txt -text
+3rdparty/libapogee/conf/NCG6.txt -text
+3rdparty/libapogee/conf/NCG77.txt -text
+3rdparty/libapogee/conf/NCG77S.txt -text
+3rdparty/libapogee/conf/NCG77V.txt -text
+3rdparty/libapogee/conf/NCG8300.txt -text
+3rdparty/libapogee/conf/NCG8300S.txt -text
 3rdparty/libapogee/conf/NF10140S.txt -text
 3rdparty/libapogee/conf/NF1109R.txt -text
 3rdparty/libapogee/conf/NF16000R.txt -text
+3rdparty/libapogee/conf/NF16000R2.txt -text
 3rdparty/libapogee/conf/NF16000S.txt -text
 3rdparty/libapogee/conf/NF29050R.txt -text
 3rdparty/libapogee/conf/NF30R.txt -text
@@ -767,6 +815,8 @@
 3rdparty/libapogee/conf/NF8300S.txt -text
 3rdparty/libapogee/conf/NF9R.txt -text
 3rdparty/libapogee/conf/NF9S.txt -text
+3rdparty/libapogee/conf/NR230.txt -text
+3rdparty/libapogee/conf/NS230.txt -text
 3rdparty/libapogee/conf/NoOpH.txt -text
 3rdparty/libapogee/conf/NoOpV.txt -text
 3rdparty/libapogee/conf/XAV1.txt -text
