--- a/.gitattributes
+++ b/.gitattributes
@@ -1185,6 +1185,8 @@ libindi/drivers/focuser/focus_simulator.h -text
 libindi/drivers/focuser/indi_tcfs_sk.xml -text
 libindi/drivers/focuser/moonlite.cpp -text
 libindi/drivers/focuser/moonlite.h -text
+libindi/drivers/focuser/nfocus.cpp -text
+libindi/drivers/focuser/nfocus.h -text
 libindi/drivers/focuser/robofocus.cpp -text
 libindi/drivers/focuser/robofocus.h -text
 libindi/drivers/focuser/tcfs.cpp -text
