--- a/.gitattributes
+++ b/.gitattributes
@@ -83,6 +83,7 @@
 3rdparty/indi-apogee/apogee_ccd.cpp -text
 3rdparty/indi-apogee/apogee_ccd.h -text
 3rdparty/indi-apogee/indi_apogee.xml -text
+3rdparty/indi-asicam/99-asi.rules -text
 3rdparty/indi-asicam/CMakeLists.txt -text
 3rdparty/indi-asicam/COPYING.LGPL -text
 3rdparty/indi-asicam/README.md -text
