Starting work on encoder support

--- a/ujari/CMakeLists.txt
+++ b/ujari/CMakeLists.txt
@@ -13,6 +13,7 @@ find_package(INDI REQUIRED)
 find_package(Nova REQUIRED)
 find_package(ZLIB REQUIRED)
 find_package(MODBUS REQUIRED)
+find_package(AIOUSB REQUIRED)
 find_package(Threads REQUIRED)
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h )
@@ -23,6 +24,7 @@ include_directories( ${CMAKE_CURRENT_SOURCE_DIR})
 include_directories( ${INDI_INCLUDE_DIR})
 include_directories( ${NOVA_INCLUDE_DIR})
 include_directories( ${MODBUS_INCLUDE_DIR})
+include_directories( ${AIOUSB_INCLUDE_DIR})
 
 ########### Ujari ###############
 set(ujari_SRCS
@@ -36,7 +38,7 @@ set(ujari_SRCS
 
 add_executable(indi_ujari_telescope ${ujari_SRCS})
 
-target_link_libraries(indi_ujari_telescope ${INDI_LIBRARIES} ${INDI_DRIVER_LIBRARIES} ${NOVA_LIBRARIES} ${MODBUS_LIBRARIES})
+target_link_libraries(indi_ujari_telescope ${INDI_LIBRARIES} ${INDI_DRIVER_LIBRARIES} ${NOVA_LIBRARIES} ${MODBUS_LIBRARIES} ${AIOUSB_LIBRARIES})
 
 install(TARGETS indi_ujari_telescope RUNTIME DESTINATION bin )
 
