--- a/.gitattributes
+++ b/.gitattributes
@@ -933,6 +933,7 @@
 3rdparty/sbig/sbigpcam.hex -text
 3rdparty/sbig/sbigucam.hex -text
 3rdparty/sbig/stfga.bin -text
+cmake_modules/FindAIOUSB.cmake -text
 cmake_modules/FindALUT.cmake -text
 cmake_modules/FindAPOGEE.cmake -text
 cmake_modules/FindCFITSIO.cmake -text
