Adding pthread support to the driver and some random fixes

--- a/ujari/CMakeLists.txt
+++ b/ujari/CMakeLists.txt
@@ -59,7 +59,7 @@ SET(CMAKE_CXX_FLAGS "-D__aiousb_cplusplus" )
 add_executable(indi_ujari_telescope ${ujari_SRCS})
 
 target_link_libraries(indi_ujari_telescope ${INDI_LIBRARIES} ${INDI_DRIVER_LIBRARIES} ${NOVA_LIBRARIES} ${AIOUSB_CPP_LIBRARIES}
- ${MODBUS_LIBRARIES} ${OPENAL_LIBRARY} ${ALUT_LIBRARY} ${VORBIS_LIBRARY} ${VORBISFILE_LIBRARY})
+ ${MODBUS_LIBRARIES} ${OPENAL_LIBRARY} ${ALUT_LIBRARY} ${VORBIS_LIBRARY} ${VORBISFILE_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
 
 install(TARGETS indi_ujari_telescope RUNTIME DESTINATION bin )
 
