--- a/.gitattributes
+++ b/.gitattributes
@@ -196,6 +196,9 @@
 3rdparty/indi-eqmod/eqmoderror.h -text
 3rdparty/indi-eqmod/indi_eqmod.xml -text
 3rdparty/indi-eqmod/indi_eqmod_sk.xml -text
+3rdparty/indi-eqmod/scope-limits/indi_eqmod_scope_limits_sk.xml -text
+3rdparty/indi-eqmod/scope-limits/scope-limits.cpp -text
+3rdparty/indi-eqmod/scope-limits/scope-limits.h -text
 3rdparty/indi-eqmod/simulator/indi_eqmod_simulator_sk.xml -text
 3rdparty/indi-eqmod/simulator/simulator.cpp -text
 3rdparty/indi-eqmod/simulator/simulator.h -text
