adding debug packages

--- a/.gitattributes
+++ b/.gitattributes
@@ -961,30 +961,35 @@ debian/indi-aagcloudwatcher/changelog -text
 debian/indi-aagcloudwatcher/compat -text
 debian/indi-aagcloudwatcher/control -text
 debian/indi-aagcloudwatcher/copyright -text
+debian/indi-aagcloudwatcher/indi-aagcloudwatcher.install -text
 debian/indi-aagcloudwatcher/rules -text
 debian/indi-aagcloudwatcher/source/format -text
 debian/indi-apogee/changelog -text
 debian/indi-apogee/compat -text
 debian/indi-apogee/control -text
 debian/indi-apogee/copyright -text
+debian/indi-apogee/indi-apogee.install -text
 debian/indi-apogee/rules -text
 debian/indi-apogee/source/format -text
 debian/indi-asicam/changelog -text
 debian/indi-asicam/compat -text
 debian/indi-asicam/control -text
 debian/indi-asicam/copyright -text
+debian/indi-asicam/indi-asicam.install -text
 debian/indi-asicam/rules -text
 debian/indi-asicam/source/format -text
 debian/indi-eqmod/changelog -text
 debian/indi-eqmod/compat -text
 debian/indi-eqmod/control -text
 debian/indi-eqmod/copyright -text
+debian/indi-eqmod/indi-eqmod.install -text
 debian/indi-eqmod/rules -text
 debian/indi-eqmod/watch -text
 debian/indi-fishcamp/changelog -text
 debian/indi-fishcamp/compat -text
 debian/indi-fishcamp/control -text
 debian/indi-fishcamp/copyright -text
+debian/indi-fishcamp/indi-fishcamp.install -text
 debian/indi-fishcamp/rules -text
 debian/indi-fishcamp/source/format -text
 debian/indi-fishcamp/watch -text
@@ -992,12 +997,14 @@ debian/indi-fli/changelog -text
 debian/indi-fli/compat -text
 debian/indi-fli/control -text
 debian/indi-fli/copyright -text
+debian/indi-fli/indi-fli.install -text
 debian/indi-fli/rules -text
 debian/indi-fli/source/format -text
 debian/indi-gphoto/changelog -text
 debian/indi-gphoto/compat -text
 debian/indi-gphoto/control -text
 debian/indi-gphoto/copyright -text
+debian/indi-gphoto/indi-gphoto.install -text
 debian/indi-gphoto/rules -text
 debian/indi-qhy/changelog -text
 debian/indi-qhy/compat -text
@@ -1012,6 +1019,7 @@ debian/indi-qsi/changelog -text
 debian/indi-qsi/compat -text
 debian/indi-qsi/control -text
 debian/indi-qsi/copyright -text
+debian/indi-qsi/indi-qsi.install -text
 debian/indi-qsi/rules -text
 debian/indi-qsi/source/format -text
 debian/indi-qsi/watch -text
@@ -1019,6 +1027,7 @@ debian/indi-sbig/changelog -text
 debian/indi-sbig/compat -text
 debian/indi-sbig/control -text
 debian/indi-sbig/copyright -text
+debian/indi-sbig/indi-sbig.install -text
 debian/indi-sbig/rules -text
 debian/indi-sbig/source/format -text
 debian/indi-sx/changelog -text
