--- a/.gitattributes
+++ b/.gitattributes
@@ -259,6 +259,13 @@
 3rdparty/indi-qhy-old/qhyspecific.cpp -text
 3rdparty/indi-qhy-old/qhyspecific.h -text
 3rdparty/indi-qhy-old/qhytest.cpp -text
+3rdparty/indi-qhy/AUTHORS -text
+3rdparty/indi-qhy/INSTALL -text
+3rdparty/indi-qhy/README -text
+3rdparty/indi-qhy/config.h.cmake -text
+3rdparty/indi-qhy/indi_qhy.xml -text
+3rdparty/indi-qhy/qhy_ccd.cpp -text
+3rdparty/indi-qhy/qhy_ccd.h -text
 3rdparty/indi-qsi/99-qsi.rules -text
 3rdparty/indi-qsi/AUTHORS -text
 3rdparty/indi-qsi/INSTALL -text
