--- a/.gitattributes
+++ b/.gitattributes
@@ -1290,6 +1290,8 @@ libindi/drivers/focuser/nfocus.cpp -text
 libindi/drivers/focuser/nfocus.h -text
 libindi/drivers/focuser/robofocus.cpp -text
 libindi/drivers/focuser/robofocus.h -text
+libindi/drivers/focuser/steeldrive.cpp -text
+libindi/drivers/focuser/steeldrive.h -text
 libindi/drivers/focuser/tcfs.cpp -text
 libindi/drivers/focuser/tcfs.h -text
 libindi/drivers/telescope/celestrongps.cpp -text
