--- a/.gitattributes
+++ b/.gitattributes
@@ -1275,6 +1275,8 @@ libindi/drivers/auxiliary/joystickdriver.cpp -text
 libindi/drivers/auxiliary/joystickdriver.h -text
 libindi/drivers/ccd/ccd_simulator.cpp -text
 libindi/drivers/ccd/ccd_simulator.h -text
+libindi/drivers/dome/baader_dome.cpp -text
+libindi/drivers/dome/baader_dome.h -text
 libindi/drivers/dome/dome_simulator.cpp -text
 libindi/drivers/dome/dome_simulator.h -text
 libindi/drivers/filter_wheel/filter_simulator.cpp -text
