Updating to version 7.2.0 from QSI

--- a/.gitattributes
+++ b/.gitattributes
@@ -979,6 +979,7 @@
 3rdparty/libqsi/CCDCamera.cpp -text
 3rdparty/libqsi/CCDCamera.h -text
 3rdparty/libqsi/CMakeLists.txt -text
+3rdparty/libqsi/CMakeLists.txt.user -text
 3rdparty/libqsi/COPYING -text
 3rdparty/libqsi/CameraID.cpp -text
 3rdparty/libqsi/CameraID.h -text
@@ -989,16 +990,29 @@
 3rdparty/libqsi/Filter.h -text
 3rdparty/libqsi/FilterWheel.cpp -text
 3rdparty/libqsi/FilterWheel.h -text
+3rdparty/libqsi/HostConnection.cpp -text
+3rdparty/libqsi/HostConnection.h -text
+3rdparty/libqsi/HostIO_TCP.cpp -text
+3rdparty/libqsi/HostIO_TCP.h -text
+3rdparty/libqsi/HostIO_USB.cpp -text
+3rdparty/libqsi/HostIO_USB.h -text
 3rdparty/libqsi/HotPixelMap.cpp -text
 3rdparty/libqsi/HotPixelMap.h -text
+3rdparty/libqsi/ICameraEeprom.cpp -text
+3rdparty/libqsi/ICameraEeprom.h -text
+3rdparty/libqsi/IHostIO.cpp -text
+3rdparty/libqsi/IHostIO.h -text
 3rdparty/libqsi/INSTALL -text
 3rdparty/libqsi/NEWS -text
 3rdparty/libqsi/QSICriticalSection.h -text
+3rdparty/libqsi/QSIError.cpp -text
 3rdparty/libqsi/QSIError.h -text
 3rdparty/libqsi/QSIFeatures.cpp -text
 3rdparty/libqsi/QSIFeatures.h -text
 3rdparty/libqsi/QSILog.cpp -text
 3rdparty/libqsi/QSILog.h -text
+3rdparty/libqsi/QSIModelInfo.cpp -text
+3rdparty/libqsi/QSIModelInfo.h -text
 3rdparty/libqsi/QSI_Global.h -text
 3rdparty/libqsi/QSI_Interface.cpp -text
 3rdparty/libqsi/QSI_Interface.h -text
@@ -1011,6 +1025,8 @@
 3rdparty/libqsi/README -text
 3rdparty/libqsi/SimpleIni.h -text
 3rdparty/libqsi/TODO -text
+3rdparty/libqsi/VidPid.cpp -text
+3rdparty/libqsi/VidPid.h -text
 3rdparty/libqsi/WinTypes.h -text
 3rdparty/libqsi/config.h.cmake -text
 3rdparty/libqsi/demo_src/ExternalTrigger.cpp -text
