Add INDI Meade DSI driver by Ben Gilsrud

--- a/.gitattributes
+++ b/.gitattributes
@@ -57,6 +57,31 @@
 3rdparty/indi-asicam/indi_asicam.cpp -text
 3rdparty/indi-asicam/indi_asicam.h -text
 3rdparty/indi-asicam/indi_asiccd.xml -text
+3rdparty/indi-dsi/99-meadedsi.rules -text
+3rdparty/indi-dsi/CMakeLists.txt -text
+3rdparty/indi-dsi/DsiDevice.cpp -text
+3rdparty/indi-dsi/DsiDevice.h -text
+3rdparty/indi-dsi/DsiDeviceFactory.cpp -text
+3rdparty/indi-dsi/DsiDeviceFactory.h -text
+3rdparty/indi-dsi/DsiException.h -text
+3rdparty/indi-dsi/DsiPro.cpp -text
+3rdparty/indi-dsi/DsiPro.h -text
+3rdparty/indi-dsi/DsiProII.cpp -text
+3rdparty/indi-dsi/DsiProII.h -text
+3rdparty/indi-dsi/DsiTypes.cpp -text
+3rdparty/indi-dsi/DsiTypes.h -text
+3rdparty/indi-dsi/INSTALL -text
+3rdparty/indi-dsi/NamedEnum.h -text
+3rdparty/indi-dsi/README -text
+3rdparty/indi-dsi/Util.cpp -text
+3rdparty/indi-dsi/Util.h -text
+3rdparty/indi-dsi/cmake_modules/FindCFITSIO.cmake -text
+3rdparty/indi-dsi/cmake_modules/FindINDI.cmake -text
+3rdparty/indi-dsi/cmake_modules/FindUSB-1.cmake -text
+3rdparty/indi-dsi/cmake_modules/FindUSB.cmake -text
+3rdparty/indi-dsi/dsi_ccd.cpp -text
+3rdparty/indi-dsi/dsi_ccd.h -text
+3rdparty/indi-dsi/indi_dsi.xml -text
 3rdparty/indi-duino/CMakeLists.txt -text
 3rdparty/indi-duino/README -text
 3rdparty/indi-duino/add-on/meteostationWEB/README -text
