adding new binary-only for now libqhy by QHY

--- a/.gitattributes
+++ b/.gitattributes
@@ -993,6 +993,42 @@
 3rdparty/libqhy-old/src/qhyxxx.h -text
 3rdparty/libqhy-old/src/simu.cpp -text
 3rdparty/libqhy-old/src/simu.h -text
+3rdparty/libqhy/85-qhyccd.rules -text
+3rdparty/libqhy/CMakeLists.txt -text
+3rdparty/libqhy/firmware/IC8300.HEX -text
+3rdparty/libqhy/firmware/IMG0H.HEX -text
+3rdparty/libqhy/firmware/IMG2P.HEX -text
+3rdparty/libqhy/firmware/IMG2S.HEX -text
+3rdparty/libqhy/firmware/IMG50.HEX -text
+3rdparty/libqhy/firmware/QHY10.HEX -text
+3rdparty/libqhy/firmware/QHY11.HEX -text
+3rdparty/libqhy/firmware/QHY12.HEX -text
+3rdparty/libqhy/firmware/QHY16.HEX -text
+3rdparty/libqhy/firmware/QHY16000.HEX -text
+3rdparty/libqhy/firmware/QHY2.HEX -text
+3rdparty/libqhy/firmware/QHY20.HEX -text
+3rdparty/libqhy/firmware/QHY21.HEX -text
+3rdparty/libqhy/firmware/QHY22.HEX -text
+3rdparty/libqhy/firmware/QHY23.HEX -text
+3rdparty/libqhy/firmware/QHY2E.HEX -text
+3rdparty/libqhy/firmware/QHY5.HEX -text
+3rdparty/libqhy/firmware/QHY5II.HEX -text
+3rdparty/libqhy/firmware/QHY5LOADER.HEX -text
+3rdparty/libqhy/firmware/QHY6.HEX -text
+3rdparty/libqhy/firmware/QHY7.HEX -text
+3rdparty/libqhy/firmware/QHY8.HEX -text
+3rdparty/libqhy/firmware/QHY8L.HEX -text
+3rdparty/libqhy/firmware/QHY8M.HEX -text
+3rdparty/libqhy/firmware/QHY8PRO.HEX -text
+3rdparty/libqhy/firmware/QHY9S.HEX -text
+3rdparty/libqhy/firmware/miniCam5.HEX -text
+3rdparty/libqhy/libqhyccd_32.bin -text
+3rdparty/libqhy/libqhyccd_64.bin -text
+3rdparty/libqhy/libqhyccd_arm_v6.bin -text
+3rdparty/libqhy/qhyccd.h -text
+3rdparty/libqhy/qhyccdcamdef.h -text
+3rdparty/libqhy/qhyccderr.h -text
+3rdparty/libqhy/qhyccdstruct.h -text
 3rdparty/libqsi/AUTHORS -text
 3rdparty/libqsi/CCDCamera.cpp -text
 3rdparty/libqsi/CCDCamera.h -text
