--- a/.gitattributes
+++ b/.gitattributes
@@ -1111,6 +1111,7 @@
 cmake_modules/FindAIOUSB.cmake -text
 cmake_modules/FindALUT.cmake -text
 cmake_modules/FindAPOGEE.cmake -text
+cmake_modules/FindASI.cmake -text
 cmake_modules/FindCFITSIO.cmake -text
 cmake_modules/FindDC1394.cmake -text
 cmake_modules/FindFISHCAMP.cmake -text
