--- a/.gitattributes
+++ b/.gitattributes
@@ -55,6 +55,8 @@
 3rdparty/indi-asicam/asi_ccd.cpp -text
 3rdparty/indi-asicam/asi_ccd.h -text
 3rdparty/indi-asicam/indi_asiccd.xml -text
+3rdparty/indi-asicam/mac32/libASICamera2.bin -text
+3rdparty/indi-asicam/mac64/libASICamera2.bin -text
 3rdparty/indi-asicam/x64/libASICamera2.bin -text
 3rdparty/indi-asicam/x86/libASICamera2.bin -text
 3rdparty/indi-dsi/99-meadedsi.rules -text
